--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -7,6 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="meno">@color/black</color>
-    <color name="meno_text">@color/white</color>
+    <color name="meno">#FFFFFF</color>
+    <color name="meno_text">@color/black</color>
 </resources>
