--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -39,6 +39,7 @@
             android:gravity="center"
             android:textColor="@color/meno_text"
             android:textSize="25sp"
+            android:textStyle="bold"
             android:background="@drawable/meno"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -231,9 +232,10 @@
             android:layout_height="wrap_content"
             android:text="@string/list_znalosti"
             android:textSize="14sp"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/znalosti"/>
+            app:layout_constraintTop_toBottomOf="@+id/znalosti" />
 
         <TextView
             android:id="@+id/jazyky"
@@ -343,6 +345,7 @@
             android:text="@string/erasmus"
             android:textSize="16sp"
             android:textStyle="bold"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/digital_marketing_vydavatelia"/>
@@ -357,13 +360,34 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/erasmus"/>
 
+        <ImageView
+            android:id="@+id/it_certificate"
+            android:layout_width="match_parent"
+            android:layout_height="330sp"
+            android:src="@drawable/google_it_certificate"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="20sp"
+            app:layout_constraintTop_toBottomOf="@+id/erasmus_vydavatelia"/>
+
+        <ImageView
+            android:id="@+id/digital_marketing_certificate"
+            android:layout_width="match_parent"
+            android:layout_height="300sp"
+            android:src="@drawable/google_certifikat_zaklady_digitalneho_marketingu"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="20sp"
+            app:layout_constraintTop_toBottomOf="@+id/it_certificate"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/empty_space"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/erasmus_vydavatelia"/>
+            app:layout_constraintTop_toBottomOf="@+id/digital_marketing_certificate"/>
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
