--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,27 +20,39 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <TextView
+            android:id="@+id/status_bar_space"
+            android:layout_width="match_parent"
+            android:layout_height="50sp"
+            android:background="@color/meno"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBaseline_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="100dp"
+            android:background="@color/meno"
+            android:contentDescription="@string/photo_of_marek_guran"
             android:foregroundGravity="center"
             android:src="@drawable/fotka"
-            android:background="@color/meno"
             app:layout_constraintBaseline_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/status_bar_space" />
 
         <TextView
             android:id="@+id/meno"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"
+            android:background="@drawable/meno"
             android:gravity="center"
+            android:text="@string/app_name"
             android:textColor="@color/meno_text"
             android:textSize="25sp"
             android:textStyle="bold"
-            android:background="@drawable/meno"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -256,6 +268,7 @@
             android:layout_height="wrap_content"
             android:text="@string/jazyky_list"
             android:textSize="14sp"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/jazyky"/>
@@ -361,6 +374,7 @@
             app:layout_constraintTop_toBottomOf="@+id/erasmus"/>
 
         <ImageView
+            android:contentDescription="@string/google_it_certificate_photo"
             android:id="@+id/it_certificate"
             android:layout_width="match_parent"
             android:layout_height="330sp"
@@ -371,6 +385,7 @@
             app:layout_constraintTop_toBottomOf="@+id/erasmus_vydavatelia"/>
 
         <ImageView
+            android:contentDescription="@string/google_marketing_photo"
             android:id="@+id/digital_marketing_certificate"
             android:layout_width="match_parent"
             android:layout_height="300sp"
