--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="meno">#FFFFFF</color>
     <color name="meno_text">@color/black</color>
+    <color name="android">#3DDA84</color>
 </resources>
