--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -33,7 +33,7 @@
             android:background="@drawable/android"
             android:gravity="center"
             android:text="@string/android"
-            android:textColor="@color/meno_text"
+            android:textColor="@color/nazov_karty"
             android:textSize="25sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -58,13 +58,15 @@
             android:id="@+id/hardver"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/android"
+            android:background="@drawable/hardver"
             android:gravity="center"
             android:text="@string/hardver"
-            android:textColor="@color/meno_text"
+            android:textColor="@color/nazov_karty"
             android:textSize="25sp"
             android:textStyle="bold"
             android:layout_marginTop="20sp"
+            android:layout_marginLeft="10sp"
+            android:layout_marginRight="10sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/android_text"/>
@@ -75,7 +77,7 @@
             android:layout_height="match_parent"
             android:text="@string/hardver_text"
             android:textSize="14sp"
-            android:background="@drawable/android_text"
+            android:background="@drawable/hardver_text"
             android:layout_marginTop="20sp"
             android:layout_marginLeft="20sp"
             android:layout_marginRight="20sp"
