--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -59,12 +58,14 @@
 
         <TextView
             android:id="@+id/o_mne"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginTop="20sp"
             android:text="@string/o_mne_nadpis"
+            android:background="@drawable/o_mne"
             android:textSize="20sp"
             android:textStyle="bold"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/meno" />
@@ -73,119 +74,137 @@
             android:id="@+id/text_o_mne"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10sp"
-            android:layout_marginRight="10sp"
             android:text="@string/o_mne"
             android:textAlignment="center"
             android:textSize="14sp"
+            android:background="@drawable/o_mne_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/o_mne" />
 
         <TextView
             android:id="@+id/pracovne_skusenosti"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20sp"
             android:text="@string/pracovne_skusenosti_nadpis"
             android:textSize="20sp"
+            android:textAlignment="center"
             android:textStyle="bold"
+            android:background="@drawable/pracovne_skusenosti"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_o_mne" />
 
         <TextView
             android:id="@+id/nay_rok"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10sp"
             android:text="@string/nay_rok"
             android:textSize="16sp"
             android:textStyle="bold"
+            android:background="@color/pracovne_skusenosti"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/pracovne_skusenosti" />
 
         <TextView
             android:id="@+id/nay_lokacia"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/nay_lokalizacia"
             android:textSize="12sp"
+            android:textAlignment="center"
+            android:background="@color/pracovne_skusenosti"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nay_rok" />
 
         <TextView
             android:id="@+id/nay_praca"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/nay_popis"
             android:textSize="14sp"
+            android:textAlignment="center"
+            android:background="@color/pracovne_skusenosti"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nay_lokacia" />
 
         <TextView
             android:id="@+id/alfa_rok"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10sp"
+            android:paddingTop="10sp"
             android:text="@string/alfa_rok"
             android:textSize="16sp"
+            android:textAlignment="center"
             android:textStyle="bold"
+            android:background="@color/pracovne_skusenosti"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nay_praca" />
 
         <TextView
             android:id="@+id/alfa_lokacia"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/alfa_lokalizacia"
             android:textSize="12sp"
+            android:textAlignment="center"
+            android:background="@color/pracovne_skusenosti"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/alfa_rok" />
 
         <TextView
             android:id="@+id/alfa_praca"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/alfa_popis"
             android:textSize="14sp"
+            android:textAlignment="center"
+            android:background="@color/pracovne_skusenosti"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/alfa_lokacia" />
 
         <TextView
             android:id="@+id/neografia_rok"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/neografia_rok"
             android:textSize="16sp"
             android:textStyle="bold"
-            android:layout_marginTop="10sp"
+            android:textAlignment="center"
+            android:paddingTop="10sp"
+            android:background="@color/pracovne_skusenosti"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/alfa_praca" />
 
         <TextView
             android:id="@+id/neografia_lokacia"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/neografia_lokalizacia"
             android:textSize="12sp"
+            android:textAlignment="center"
+            android:background="@color/pracovne_skusenosti"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/neografia_rok" />
 
         <TextView
             android:id="@+id/neografia_praca"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/neografia_popis"
             android:textSize="14sp"
+            android:textAlignment="center"
+            android:background="@drawable/pracovne_skusenosti_koniec"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/neografia_lokacia"/>
