--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -211,12 +211,14 @@
 
         <TextView
             android:id="@+id/vzdelanie"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20sp"
             android:text="@string/vzdelanie"
             android:textSize="20sp"
             android:textStyle="bold"
+            android:textAlignment="center"
+            android:background="@drawable/vzdelanie"
             app:layout_goneMarginTop="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -224,34 +226,39 @@
 
         <TextView
             android:id="@+id/vzdelanie_nazov"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10sp"
             android:text="@string/alfa_rok"
             android:textSize="16sp"
+            android:textAlignment="center"
             android:textStyle="bold"
+            android:background="@color/vzdelanie"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/vzdelanie"/>
 
         <TextView
             android:id="@+id/vzdelanie_odbor"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/vzdelanie_odbor"
             android:textSize="14sp"
+            android:textAlignment="center"
+            android:background="@drawable/vzdelanie_koniec"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/vzdelanie_nazov"/>
 
         <TextView
             android:id="@+id/znalosti"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20sp"
             android:text="@string/znalosti"
             android:textSize="20sp"
             android:textStyle="bold"
+            android:textAlignment="center"
+            android:background="@drawable/znalosti"
             app:layout_goneMarginTop="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -259,23 +266,26 @@
 
         <TextView
             android:id="@+id/znalosti_list"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/list_znalosti"
             android:textSize="14sp"
             android:textAlignment="center"
+            android:background="@drawable/znalosti_koniec"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/znalosti" />
 
         <TextView
             android:id="@+id/jazyky"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20sp"
             android:text="@string/jazyky"
             android:textSize="20sp"
             android:textStyle="bold"
+            android:textAlignment="center"
+            android:background="@drawable/jazyky"
             app:layout_goneMarginTop="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -283,23 +293,26 @@
 
         <TextView
             android:id="@+id/jazyky_list"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/jazyky_list"
             android:textSize="14sp"
             android:textAlignment="center"
+            android:background="@drawable/jazyky_koniec"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/jazyky"/>
 
         <TextView
             android:id="@+id/vp"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20sp"
             android:text="@string/vp"
             android:textSize="20sp"
             android:textStyle="bold"
+            android:textAlignment="center"
+            android:background="@drawable/vp"
             app:layout_goneMarginTop="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -307,22 +320,26 @@
 
         <TextView
             android:id="@+id/vp_skupina"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/vp_skupina"
             android:textSize="14sp"
+            android:textAlignment="center"
+            android:background="@drawable/vp_koniec"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/vp"/>
 
         <TextView
             android:id="@+id/certifikacie"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20sp"
             android:text="@string/certifikácie"
             android:textSize="20sp"
             android:textStyle="bold"
+            android:textAlignment="center"
+            android:background="@drawable/certifikaty"
             app:layout_goneMarginTop="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -330,64 +347,75 @@
 
         <TextView
             android:id="@+id/google_it"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/google_it_nazov"
             android:textSize="16sp"
+            android:textAlignment="center"
             android:textStyle="bold"
+            android:background="@color/certifikacie"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/certifikacie"/>
 
         <TextView
             android:id="@+id/it_vydavatelia"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/google_it_vydavatelia"
             android:textSize="14sp"
+            android:textAlignment="center"
+            android:background="@color/certifikacie"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/google_it"/>
 
         <TextView
             android:id="@+id/digital_marketing"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/digital_margeting"
             android:textSize="16sp"
+            android:textAlignment="center"
             android:textStyle="bold"
+            android:background="@color/certifikacie"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/it_vydavatelia"/>
 
         <TextView
             android:id="@+id/digital_marketing_vydavatelia"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/digital_marketing_vydavatelia"
             android:textSize="14sp"
+            android:textAlignment="center"
+            android:background="@color/certifikacie"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/digital_marketing"/>
 
         <TextView
             android:id="@+id/erasmus"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/erasmus"
             android:textSize="16sp"
             android:textStyle="bold"
             android:textAlignment="center"
+            android:background="@color/certifikacie"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/digital_marketing_vydavatelia"/>
 
         <TextView
             android:id="@+id/erasmus_vydavatelia"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/erasmus_vydavatelia"
             android:textSize="14sp"
+            android:textAlignment="center"
+            android:background="@drawable/certifikaty_koniec"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/erasmus"/>
