--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -228,7 +228,7 @@
             android:id="@+id/vzdelanie_nazov"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/alfa_rok"
+            android:text="@string/vzdelanie_nazov"
             android:textSize="16sp"
             android:textAlignment="center"
             android:textStyle="bold"
