New material3 navigation panel

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -22,4 +22,5 @@
     <color name="jazyky">#248F3F</color>
     <color name="vp">#CA4203</color>
     <color name="certifikacie">#770298</color>
+    <color name="nav_icons">#FFFFFF</color>
 </resources>
