--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,5 @@
     <color name="jazyky">#81D697</color>
     <color name="vp">#FDA67E</color>
     <color name="certifikacie">#D386E9</color>
+    <color name="nav_icons">#000000</color>
 </resources>
