--- a/app/src/main/res/drawable/meno.xml
+++ b/app/src/main/res/drawable/meno.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/meno"></solid>
+    <solid android:color="@color/o_mne"></solid>
     <corners
         android:bottomLeftRadius="40dp"
         android:bottomRightRadius="40dp" />
