--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -16,15 +16,6 @@
             android:layout_height="wrap_content"
             android:textSize="0sp"/>
 
-        <TextView
-            android:id="@+id/status_bar_space"
-            android:layout_width="match_parent"
-            android:layout_height="50sp"
-            android:background="@color/android"
-            app:layout_constraintBaseline_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/android"
@@ -36,9 +27,12 @@
             android:textColor="@color/nazov_karty"
             android:textSize="25sp"
             android:textStyle="bold"
+            android:layout_marginTop="10sp"
+            android:layout_marginLeft="10sp"
+            android:layout_marginRight="10sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/status_bar_space" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/android_text"
