--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,20 +10,13 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">#00000000</item>
+        <item name="android:statusBarColor">@color/o_mne</item>
         <item name="android:windowLightStatusBar">
-            false
+            true
         </item>
         <!-- Customize your theme here. -->
         <item name="android:textColor">@color/black</item>
         <item name="android:textColor">@color/meno</item>
     </style>
 
-    <style name="Widget.Material3.BottomNavigationView.ActiveIndicator" parent="">
-        <item name="android:width">@dimen/m3_bottom_nav_item_active_indicator_width</item>
-        <item name="android:height">@dimen/m3_bottom_nav_item_active_indicator_height</item>
-        <item name="marginHorizontal">@dimen/m3_bottom_nav_item_active_indicator_margin_horizontal</item>
-        <item name="shapeAppearance">@style/ShapeAppearance.Material3.NavigationBarView.ActiveIndicator</item>
-        <item name="android:color">@color/o_mne</item>
-    </style>
 </resources>
