--- a/app/src/main/res/drawable/hardver.xml
+++ b/app/src/main/res/drawable/hardver.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/hardver" />
-    <corners android:radius="40sp" />
+    <solid android:color="@color/card" />
+    <corners android:topLeftRadius="20sp"
+        android:topRightRadius="20sp"/>
+    <padding android:top="10sp" />
 </shape>
