--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -16,6 +16,16 @@
             android:layout_height="wrap_content"
             android:textSize="0sp"/>
 
+        <TextView
+            android:id="@+id/status_bar_space"
+            android:layout_width="match_parent"
+            android:layout_height="50sp"
+            android:background="#00E8E7E7"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBaseline_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
 
         <TextView
             android:id="@+id/android"
@@ -24,7 +34,6 @@
             android:background="@drawable/android"
             android:gravity="center"
             android:text="@string/android"
-            android:textColor="@color/nazov_karty"
             android:textSize="25sp"
             android:textStyle="bold"
             android:layout_marginTop="10sp"
@@ -32,7 +41,7 @@
             android:layout_marginRight="10sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/status_bar_space" />
 
         <TextView
             android:id="@+id/android_text"
@@ -41,9 +50,8 @@
             android:text="@string/android_text"
             android:textSize="14sp"
             android:background="@drawable/android_text"
-            android:layout_marginTop="20sp"
-            android:layout_marginLeft="20sp"
-            android:layout_marginRight="20sp"
+            android:layout_marginLeft="10sp"
+            android:layout_marginRight="10sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/android" />
@@ -55,7 +63,6 @@
             android:background="@drawable/hardver"
             android:gravity="center"
             android:text="@string/hardver"
-            android:textColor="@color/nazov_karty"
             android:textSize="25sp"
             android:textStyle="bold"
             android:layout_marginTop="20sp"
@@ -72,9 +79,8 @@
             android:text="@string/hardver_text"
             android:textSize="14sp"
             android:background="@drawable/hardver_text"
-            android:layout_marginTop="20sp"
-            android:layout_marginLeft="20sp"
-            android:layout_marginRight="20sp"
+            android:layout_marginLeft="10sp"
+            android:layout_marginRight="10sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/hardver"/>
