--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -7,20 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="meno">#FFFFFF</color>
-    <color name="meno_text">@color/black</color>
-    <color name="nazov_karty">@color/white</color>
-    <color name="android">#3DDA84</color>
-    <color name="android_text">#33B66E</color>
-    <color name="hardver">#ADFF3B3B</color>
-    <color name="hardver_text">#ADF80202</color>
-    <color name="o_mne">#8B323131</color>
-    <color name="o_mne_text">#8B323131</color>
-    <color name="pracovne_skusenosti">#1C4361</color>
-    <color name="vzdelanie">#AF9200</color>
-    <color name="znalosti">#ADFF3B3B</color>
-    <color name="jazyky">#248F3F</color>
-    <color name="vp">#CA4203</color>
-    <color name="certifikacie">#770298</color>
-    <color name="nav_icons">#FFFFFF</color>
+
+    <color name="card">#8B323131</color>
 </resources>
