--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,20 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="meno">@color/black</color>
-    <color name="meno_text">@color/white</color>
-    <color name="android">#3DDA84</color>
-    <color name="android_text">#63F8A7</color>
-    <color name="nazov_karty">@color/white</color>
-    <color name="hardver">#ADF80202</color>
-    <color name="hardver_text">#ADFA4242</color>
-    <color name="o_mne">#E8E7E7</color>
-    <color name="o_mne_text">#E8E7E7</color>
-    <color name="pracovne_skusenosti">#84C8FD</color>
-    <color name="vzdelanie">#F8E47C</color>
-    <color name="znalosti">#ADF87E7E</color>
-    <color name="jazyky">#81D697</color>
-    <color name="vp">#FDA67E</color>
-    <color name="certifikacie">#D386E9</color>
-    <color name="nav_icons">#000000</color>
+
+    <color name="card">#E8E7E7</color>
 </resources>
