--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,13 +10,12 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">@color/o_mne</item>
+        <item name="android:statusBarColor">#00E8E7E7</item>
         <item name="android:windowLightStatusBar">
             true
         </item>
         <!-- Customize your theme here. -->
         <item name="android:textColor">@color/black</item>
-        <item name="android:textColor">@color/meno</item>
     </style>
 
 </resources>
